[gd_scene load_steps=28 format=3 uid="uid://do5cem0wc6pe2"]

[ext_resource type="Script" path="res://level2.gd" id="1_b24la"]
[ext_resource type="Texture2D" uid="uid://gtr245er7ej4" path="res://img/MathClass.png" id="2_swjn8"]
[ext_resource type="FontFile" uid="uid://dmijbnep8lnye" path="res://ttf/IHateComicSans.ttf" id="3_o0lsk"]
[ext_resource type="StyleBox" uid="uid://bco8numa0fc82" path="res://styles/blackboard_green.tres" id="4_44d66"]
[ext_resource type="Texture2D" uid="uid://ny2654qfkyxt" path="res://img/door_sprite/0001.png" id="5_007l1"]
[ext_resource type="Texture2D" uid="uid://dpdgunc7krdh8" path="res://img/door_sprite/0003.png" id="6_taptr"]
[ext_resource type="Texture2D" uid="uid://ctg3m0v8dt66n" path="res://img/door_sprite/0005.png" id="7_6j42m"]
[ext_resource type="Texture2D" uid="uid://bbou5vuwqgy0l" path="res://img/door_sprite/0007.png" id="8_fe5kq"]
[ext_resource type="Texture2D" uid="uid://dcjmm7hk8jmrs" path="res://img/door_sprite/0009.png" id="9_hwss4"]
[ext_resource type="Texture2D" uid="uid://bt70or0wi1j4c" path="res://img/door_sprite/0011.png" id="10_p1a5f"]
[ext_resource type="Texture2D" uid="uid://b5de52io4u8r8" path="res://img/door_sprite/0013.png" id="11_f2y54"]
[ext_resource type="Texture2D" uid="uid://cni16njg865xh" path="res://img/door_sprite/0015.png" id="12_1m384"]
[ext_resource type="Texture2D" uid="uid://dxdnqejkghdcw" path="res://img/door_sprite/0017.png" id="13_v816x"]
[ext_resource type="Texture2D" uid="uid://c6mc15md40ka3" path="res://img/door_sprite/0019.png" id="14_80emu"]
[ext_resource type="Texture2D" uid="uid://no4gyu1l1aa0" path="res://img/door_sprite/0021.png" id="15_asjst"]
[ext_resource type="Texture2D" uid="uid://cy7xkxxef1auc" path="res://img/door_sprite/0023.png" id="16_3pygx"]
[ext_resource type="Texture2D" uid="uid://c8p8dfyldooj5" path="res://img/door_sprite/0025.png" id="17_3ivdf"]
[ext_resource type="Texture2D" uid="uid://b7ohdiwfwgyfe" path="res://img/door_sprite/0027.png" id="18_gm5kx"]
[ext_resource type="Texture2D" uid="uid://cg2ondtvdkj2g" path="res://img/door_sprite/0029.png" id="19_o03h4"]

[sub_resource type="Animation" id="Animation_yla6e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AnimatedScene:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.28, 1.28)]
}

[sub_resource type="Animation" id="Animation_64ajj"]
resource_name = "move_to_blackboard"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AnimatedScene:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.28, 1.28)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpxhq"]
_data = {
"RESET": SubResource("Animation_yla6e"),
"move_to_blackboard": SubResource("Animation_64ajj")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wd4kb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_26cmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qagh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i0ksj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_007l1")
}, {
"duration": 1.0,
"texture": ExtResource("6_taptr")
}, {
"duration": 1.0,
"texture": ExtResource("7_6j42m")
}, {
"duration": 1.0,
"texture": ExtResource("8_fe5kq")
}, {
"duration": 1.0,
"texture": ExtResource("9_hwss4")
}, {
"duration": 1.0,
"texture": ExtResource("10_p1a5f")
}, {
"duration": 1.0,
"texture": ExtResource("11_f2y54")
}, {
"duration": 1.0,
"texture": ExtResource("12_1m384")
}, {
"duration": 1.0,
"texture": ExtResource("13_v816x")
}, {
"duration": 1.0,
"texture": ExtResource("14_80emu")
}, {
"duration": 1.0,
"texture": ExtResource("15_asjst")
}, {
"duration": 1.0,
"texture": ExtResource("16_3pygx")
}, {
"duration": 1.0,
"texture": ExtResource("17_3ivdf")
}, {
"duration": 1.0,
"texture": ExtResource("18_gm5kx")
}, {
"duration": 1.0,
"texture": ExtResource("19_o03h4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7pa3"]

[node name="level2" type="Node2D"]
script = ExtResource("1_b24la")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpxhq")
}

[node name="AnimatedScene" type="Control" parent="AnimationPlayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -362.0
offset_right = 642.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.28, 1.28)
pivot_offset = Vector2(641, 362)

[node name="Background" type="Sprite2D" parent="AnimationPlayer/AnimatedScene"]
position = Vector2(640, 360)
scale = Vector2(0.333, 0.333)
texture = ExtResource("2_swjn8")

[node name="MainMenu" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 926.0
offset_top = 124.0
offset_right = 1072.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("3_o0lsk")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("4_44d66")
text = "Peamenüü"

[node name="Answer1_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 382.0
offset_top = 350.0
offset_right = 528.0
offset_bottom = 487.0
color = Color(0.678431, 0, 0, 0)

[node name="Answer2_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 549.0
offset_top = 349.0
offset_right = 695.0
offset_bottom = 487.0
color = Color(0.678431, 0, 0, 0)

[node name="Answer3_colors" type="ColorRect" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 718.0
offset_top = 350.0
offset_right = 862.0
offset_bottom = 485.0
color = Color(0.678431, 0, 0, 0)

[node name="Answer1" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 382.0
offset_top = 350.0
offset_right = 527.0
offset_bottom = 488.0
theme_override_fonts/font = ExtResource("3_o0lsk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_wd4kb")
icon = SubResource("ViewportTexture_26cmn")

[node name="Answer2" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 550.0
offset_top = 349.0
offset_right = 694.0
offset_bottom = 487.0
theme_override_fonts/font = ExtResource("3_o0lsk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_5qagh")

[node name="Question" type="Label" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 407.0
offset_top = 103.0
offset_right = 836.0
offset_bottom = 317.0
theme_override_fonts/font = ExtResource("3_o0lsk")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Door" type="AnimatedSprite2D" parent="AnimationPlayer/AnimatedScene"]
position = Vector2(994, 421)
scale = Vector2(0.26, 0.26)
sprite_frames = SubResource("SpriteFrames_i0ksj")
speed_scale = 2.0

[node name="Answer3" type="Button" parent="AnimationPlayer/AnimatedScene"]
layout_mode = 0
offset_left = 718.0
offset_top = 349.0
offset_right = 863.0
offset_bottom = 487.0
theme_override_fonts/font = ExtResource("3_o0lsk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_v7pa3")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="AnimationPlayer/AnimatedScene/MainMenu" to="." method="_on_button_pressed"]
